<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/listview_background"
        android:divider="@android:color/transparent"
        android:dividerHeight="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="203dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"

                    android:paddingLeft="5dp"
                    android:paddingTop="0dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="203dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"

                    android:paddingTop="0dp"
                    android:paddingRight="5dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="90dp"
                    android:layout_height="75dp"
                    android:background="@null"
                    android:clickable="false"
                    android:ems="8"
                    android:fontFamily="cursive"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:text="Mood"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/emotionSelector"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Spinner
                    android:id="@+id/emotionSelector"
                    style="@android:style/Widget.Holo.Spinner"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/original"
                    android:dropDownWidth="match_parent"
                    android:popupBackground="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="90dp"
                    android:layout_height="37.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@null"
                    android:clickable="false"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="Social"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/editText5"
                    app:layout_constraintEnd_toStartOf="@+id/situationSelector"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/situationSelector"
                    style="@android:style/Widget.Holo.Spinner"
                    android:layout_width="300dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:dropDownWidth="match_parent"
                    android:popupBackground="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editText2"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="90dp"
                    android:layout_height="37.5dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:clickable="false"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:inputType="textPersonName"
                    android:paddingLeft="18dp"
                    android:paddingBottom="10dp"
                    android:text="Situation"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/situationSelector"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="90dp"
                    android:layout_height="75dp"
                    android:background="@null"
                    android:clickable="false"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:text="Reason"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/reason_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="16dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reason_text"
                    android:layout_width="321dp"
                    android:layout_height="75dp"
                    android:hint="@string/ae_reason_text"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editText3"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout3"
                android:layout_width="411dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp">

                <EditText
                    android:id="@+id/locationText"
                    android:layout_width="90dp"
                    android:layout_height="75dp"
                    android:layout_marginBottom="25dp"
                    android:background="@null"
                    android:clickable="false"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:text="Location"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/locationOn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/locationOn"
                    android:layout_width="129dp"
                    android:layout_height="41dp"


                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="192dp"
                    android:layout_marginBottom="59dp"
                    android:checked="false"
                    android:text="Add Location"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/locationText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:layout_marginTop="0dp">

                <!-- primary color right square -->
                <View
                    android:id="@+id/right_square_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="247dp"
                    app:layout_constraintBottom_toBottomOf="@+id/right_square_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/right_square_view"
                    app:layout_constraintTop_toTopOf="@+id/right_square_view"
                    app:srcCompat="@drawable/ic_image_white_24dp" />

                <ImageButton
                    android:id="@+id/remove_image_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:background="@color/colorAccent"
                    app:layout_constraintRight_toRightOf="@+id/right_square_view"
                    app:layout_constraintTop_toTopOf="@+id/right_square_view"
                    app:srcCompat="@drawable/ic_delete" />

                <!-- primary color left square -->
                <Button
                    android:id="@+id/image_button"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@android:color/darker_gray"
                    android:hint="@string/ae_add_photo_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/right_square_view"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="@+id/right_square_view"
                    app:layout_constraintRight_toRightOf="@+id/right_square_view"
                    app:layout_constraintTop_toTopOf="@+id/right_square_view" />

                <!-- primary color left square -->

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/cancelbutton"
        android:text="@string/am_cancel_text"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/savebutton"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>
